--- a/app/views/dash.ejs
+++ b/app/views/dash.ejs
@@ -4,8 +4,9 @@
 <body class="hold-transition skin-blue sidebar-mini">
 <!-- Site wrapper -->
 <div class="wrapper">
-  <%- include('./partials/dashmenu.ejs',{"nombre": nombre,
-                                          "foto": foto}); %>
+  <%- include('./partials/dashmenu.ejs', {"nombre":nombre, "foto":foto}); %>
+
+
 
   <!-- =============================================== -->
   <% if (menu ==0) { %>
