--- a/app/views/partials/dashmenu.ejs
+++ b/app/views/partials/dashmenu.ejs
@@ -108,7 +108,7 @@
         </li>
 
         <li>
-          <a href="../v1/categorias">
+          <a href="../v1/categoria">
             <i class="fa fa-align-left"></i> <span>Categoria</span>
           </a>
         </li>
