--- a/app/views/partials/dashmenu.ejs
+++ b/app/views/partials/dashmenu.ejs
@@ -77,15 +77,7 @@
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
       <!-- Sidebar user panel -->
-      <div class="user-panel">
-        <div class="pull-left image">
-          <img src=<%= foto %> class="img-circle" alt="User Image">
-        </div>
-        <div class="pull-left info">
-          <p><%= nombre %></p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-        </div>
-      </div>
+
 
       <!-- /.search form -->
       <!-- sidebar menu: : style can be found in sidebar.less -->
@@ -102,7 +94,7 @@
 
 
         <li>
-          <a href="../v1/prodcutos">
+          <a href="../v1/productos">
             <i class="fa fa-envelope"></i> <span>Prodcutos</span>
           </a>
         </li>
